--- a/app/src/main/res/layout/row_profile_footer.xml
+++ b/app/src/main/res/layout/row_profile_footer.xml
@@ -16,11 +16,16 @@
         android:orientation="horizontal">
         <TextView
             android:text="Your referral ID is: "
+            android:textSize="19sp"
+            android:textColor="@color/text_light_gray"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txt_referral_id"
+            android:textSize="19sp"
+            android:textColor="@color/text_dark_gray"
+            android:textStyle="bold"
             tools:text="54680321"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -29,6 +34,8 @@
     <TextView
         android:id="@+id/txt_change_pin"
         android:text="Change PIN"
+        android:textSize="13sp"
+        android:textColor="@color/green_color"
         android:layout_marginBottom="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -47,6 +54,7 @@
         android:id="@+id/txt_delete_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="13sp"
         android:text="Delete Account"
         android:textColor="@color/text_red"/>
 
