--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,10 +9,19 @@
     <color name="gray_color">#b5b5b5</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="gray">#e7e7e8</color>
+    <color name="gray_light">#ececec</color>
     <color name="dark_text_color">#2a2a2a</color>
 
     <color name="text_red">#e51f28</color>
+    <color name="text_black">#000000</color>
     <color name="text_gray">#4d4d4d</color>
+    <color name="text_green">#76bd1d</color>
+    <color name="text_light_gray">#747474</color>
+    <color name="text_dark_gray">#353535</color>
+
+    <color name="light_green">#eaf5dd</color>
+    <color name="profession_green">#d3ebb4</color>
 
 </resources>
