--- a/app/src/main/res/layout/row_profile_footer.xml
+++ b/app/src/main/res/layout/row_profile_footer.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingTop="15dp"
     android:paddingBottom="15dp">
 
