--- a/app/src/main/res/layout/row_profile_header.xml
+++ b/app/src/main/res/layout/row_profile_header.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/transparent"
+    android:layout_marginTop="30dp"
+    android:layout_marginBottom="25dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
