--- a/app/src/main/res/layout/row_profile_item.xml
+++ b/app/src/main/res/layout/row_profile_item.xml
@@ -4,6 +4,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:layout_marginLeft="15dp"
