--- a/app/src/main/res/layout/row_profile_profesion.xml
+++ b/app/src/main/res/layout/row_profile_profesion.xml
@@ -8,6 +8,8 @@
 
     <RelativeLayout
         android:layout_marginTop="15dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="10dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
         android:orientation="vertical"
