--- a/app/src/main/res/layout/row_profile_footer.xml
+++ b/app/src/main/res/layout/row_profile_footer.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="16dp"
         android:orientation="horizontal">
         <TextView
-            android:text="Your referral ID is: "
+            android:text="@string/your_referral_id_is"
             android:textSize="19sp"
             android:textColor="@color/text_light_gray"
             android:layout_width="wrap_content"
@@ -33,7 +33,7 @@
 
     <TextView
         android:id="@+id/txt_change_pin"
-        android:text="Change PIN"
+        android:text="@string/change_pin"
         android:textSize="13sp"
         android:textColor="@color/green_color"
         android:layout_marginBottom="20dp"
@@ -46,7 +46,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
-        android:text="Edit Profile"
+        android:text="@string/edit_profile"
         android:layout_marginBottom="20dp"
         style="@style/ButtonGreenStyle"/>
 
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="13sp"
-        android:text="Delete Account"
+        android:text="@string/delete_account"
         android:textColor="@color/text_red"/>
 
 
