--- a/app/src/main/res/layout/fragment_wizard_step_two.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_two.xml
@@ -46,11 +46,17 @@
             android:textSize="20sp"
             android:textStyle="bold"/>
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/green_line"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="@string/with_our_easy_process_it_only_takes_a_couple_of_minutes_to_get_onboard"
@@ -60,7 +66,7 @@
         <Button
             android:id="@+id/register"
             style="@style/ButtonLinkStyle"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:text="@string/register_now"/>
 
         <Button
