--- a/app/src/main/res/layout/fragment_register_worker_agent.xml
+++ b/app/src/main/res/layout/fragment_register_worker_agent.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#f4f4f4"
         android:orientation="vertical"
         android:paddingEnd="20dp"
         android:paddingStart="20dp">
@@ -100,7 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:background="@color/gray"
+            android:background="#d9f2ba"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -164,6 +165,166 @@
 
                 <TextView
                     android:id="@+id/txt_profession_selection"
+                    style="@style/SpinnerTextViewStyle"
+                    android:text="@string/select_profession"/>
+
+                <ImageView
+                    style="@style/SpinnerImageViewStyle"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_profession_two"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="#d9f2ba"
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/industry"
+                android:textColor="@color/dark_color"
+                android:textSize="16sp"/>
+
+            <LinearLayout
+                android:id="@+id/grp_industry_two"
+                style="@style/SpinnerLayoutStyle"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/txt_industry_selection_two"
+                    style="@style/SpinnerTextViewStyle"
+                    android:text="@string/select_industry"/>
+
+                <ImageView
+                    style="@style/SpinnerImageViewStyle"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/category"
+                android:textColor="@color/dark_color"
+                android:textSize="16sp"/>
+
+            <LinearLayout
+                android:id="@+id/grp_category_two"
+                style="@style/SpinnerLayoutStyle"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/txt_category_selection_two"
+                    style="@style/SpinnerTextViewStyle"
+                    android:text="@string/select_category"/>
+
+                <ImageView
+                    style="@style/SpinnerImageViewStyle"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/profession"
+                android:textColor="@color/dark_color"
+                android:textSize="16sp"/>
+
+            <LinearLayout
+                android:id="@+id/grp_profession_two"
+                style="@style/SpinnerLayoutStyle"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/txt_profession_selection_two"
+                    style="@style/SpinnerTextViewStyle"
+                    android:text="@string/select_profession"/>
+
+                <ImageView
+                    style="@style/SpinnerImageViewStyle"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_profession_three"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="#d9f2ba"
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/industry"
+                android:textColor="@color/dark_color"
+                android:textSize="16sp"/>
+
+            <LinearLayout
+                android:id="@+id/grp_industry_three"
+                style="@style/SpinnerLayoutStyle"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/txt_industry_selection_three"
+                    style="@style/SpinnerTextViewStyle"
+                    android:text="@string/select_industry"/>
+
+                <ImageView
+                    style="@style/SpinnerImageViewStyle"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/category"
+                android:textColor="@color/dark_color"
+                android:textSize="16sp"/>
+
+            <LinearLayout
+                android:id="@+id/grp_category_three"
+                style="@style/SpinnerLayoutStyle"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/txt_category_selection_three"
+                    style="@style/SpinnerTextViewStyle"
+                    android:text="@string/select_category"/>
+
+                <ImageView
+                    style="@style/SpinnerImageViewStyle"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/profession"
+                android:textColor="@color/dark_color"
+                android:textSize="16sp"/>
+
+            <LinearLayout
+                android:id="@+id/grp_profession_three"
+                style="@style/SpinnerLayoutStyle"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/txt_profession_selection_three"
                     style="@style/SpinnerTextViewStyle"
                     android:text="@string/select_profession"/>
 
