--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/background_x"/>
 
     <LinearLayout
+        android:id="@+id/center_items"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
