--- a/app/src/main/res/layout/row_profile_footer.xml
+++ b/app/src/main/res/layout/row_profile_footer.xml
@@ -5,10 +5,15 @@
     android:gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="15dp"
     android:paddingBottom="15dp">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:background="@color/profession_green"/>
+
     <LinearLayout
+        android:layout_marginTop="15dp"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
