--- a/app/src/main/res/layout/row_profile_profesion.xml
+++ b/app/src/main/res/layout/row_profile_profesion.xml
@@ -17,39 +17,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView"
-            android:text="@string/industry_dot"
-            style="@style/ProfileTxtKey"/>
+        <!--<TextView-->
+            <!--android:id="@+id/textView"-->
+            <!--android:text="@string/industry_dot"-->
+            <!--style="@style/ProfileTxtKey"/>-->
 
-        <TextView
-            android:id="@+id/txt_industry"
-            style="@style/ProfileTxtValue"
-            tools:text="Services" />
+        <!--<TextView-->
+            <!--android:id="@+id/txt_industry"-->
+            <!--style="@style/ProfileTxtValue"-->
+            <!--tools:text="Services" />-->
 
-        <TextView
-            android:id="@+id/textView3"
-            style="@style/ProfileTxtKey"
-            android:text="@string/category_dot"
-            android:layout_below="@id/textView"/>
+        <!--<TextView-->
+            <!--android:id="@+id/textView3"-->
+            <!--style="@style/ProfileTxtKey"-->
+            <!--android:text="@string/category_dot"-->
+            <!--android:layout_below="@id/textView"/>-->
 
-        <TextView
-            android:id="@+id/txt_category"
-            style="@style/ProfileTxtValue"
-            tools:text="Telecom:"
-            android:layout_below="@id/txt_industry"/>
+        <!--<TextView-->
+            <!--android:id="@+id/txt_category"-->
+            <!--style="@style/ProfileTxtValue"-->
+            <!--tools:text="Telecom:"-->
+            <!--android:layout_below="@id/txt_industry"/>-->
 
         <TextView
             android:id="@+id/textView4"
             style="@style/ProfileTxtKey"
-            android:text="@string/profession_dot"
-            android:layout_below="@id/textView3"/>
+            android:text="@string/profession_dot" />
+        <!--android:layout_below="@id/textView3"-->
 
         <TextView
             android:id="@+id/txt_profession"
             style="@style/ProfileTxtValue"
-            tools:text="Antenna repair"
-            android:layout_below="@id/txt_category"/>
+            tools:text="Antenna repair" />
+        <!--android:layout_below="@id/txt_category"-->
 
 
     </RelativeLayout>
